<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Track cable V2</string>
    <string name="action_settings">Réglages</string>
    <string name="action_about">A propos</string>
    <string name="action_display">Display Settings</string>
    <string name="title_ip_or_domain">Input Domain/IP</string>
    <string name="title_ping_count">PING Count</string>
    <string name="title_ping_succ">PING Success</string>
    <string name="title_ping_fail">PING failure</string>
    <string name="title_ping_seconds"> s</string>
    <string name="title_ping_background">Background</string>
    <string name="title_ping_wait">Timeout(s)</string>
    <string name="title_ping_restart">Restart</string>
    <string name="title_ping_pingresult">Ping Result</string>
    <string name="title_ping_uploadresult">Upload Result</string>
    <string name="title_ping_downloadresult">Download Result</string>
    <string name="title_start">Start</string>
    <string name="title_stop">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_set">Settings</string>
    <string name="msg_network_none">Network unavailable</string>
    <string name="msg_network_ok">Network is connected</string>
    <string name="msg_network_unavailable">Network unavailable</string>
    <string name="msg_domain_ip_bad">Domain/IP Error</string>
    <string name="msg_loding">loading...</string>
    <string name="msg_no_data">NO DATA</string>
    <string name="msg_mac_error">ERROR</string>
    <string name="msg_mac_change">CHANGED</string>
    <string name="msg_mac_unmatched">Unmatched</string>
    <string name="app_title">AppCenter %s</string>
    <string name="app_msg_exit_confirm">Again according to the exit</string>
    <string name="upload_title">Upload Tool %s</string>
    <string name="download_title">Download Tool %s</string>
    <string name="action_back">Back</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="clear">Vider</string>
    <string name="close">Close</string>
    <string name="up_one_level">..(up)</string>
    <string name="current_dir">.(refresh)</string>
    <string name="strFilePath">File Path</string>
    <string name="strBrowser">Browse</string>
    <string name="strPermissionDeny">No permission</string>
    <string name="title_activity_download">Download Tool</string>
    <string name="title_activity_upload">Upload Tool</string>
    <string name="title_Ping">Ping</string>
    <string name="title_Download">Download</string>
    <string name="title_Upload">Upload</string>
    <string name="strUpload">Upload</string>
    <string name="title_activity_ping">PingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_ping_packet_size">Packet Size</string>
    <string name="ping_title">Ping Tool %s</string>
    <string name="yid_title">1D Barcode Tool</string>
    <string name="erd_title">2D Barcode Tool</string>
    <string name="title_activity_yi_d">Barcode_1D</string>
    <string name="title_activity_er_d">Barcode_2D</string>
    <string name="title_scan">Scan</string>
    <string name="title_clear">Clear</string>
    <string name="title_init_barcode">init Barcode</string>
    <string name="title_scan_between">Interval</string>
    <string name="yid_title_scan_compare">Compare</string>
    <string name="yid_title_scan_continuous">Auto,interval</string>
    <string name="yid_msg_scan_fail">Scan failure</string>
    <string name="yid_msg_scan_error">Barcode error</string>
    <string name="title_scan_count">total</string>
    <string name="title_succ_count">success</string>
    <string name="title_fail_count">failure</string>
    <string name="title_error_count">error</string>
    <string name="title_error_rate">error</string>
    <string name="title_succ_rate">success</string>
    <string name="title_fail_rate">failure</string>
    <string name="title_activity_bluetooth_print">Bluetooth</string>
    <string name="send">Send</string>
    <string name="Print">Print</string>
    <string name="Clear">Clear</string>
    <string name="not_connected">Please connect the bluetooth printer</string>
    <string name="bt_not_enabled_leaving">Please select a device!!</string>
    <string name="title_connecting">Connexion...</string>
    <string name="title_connected_to">Connecté: </string>
    <string name="title_not_connected">Déconnecté</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">Grayscale</string>
    <string name="fontGrayScaleRange">(1~8)</string>
    <string name="PrintContent"> HELLO WORLD! \n</string>
    <string name="rfid_mgs_erase_fail">Erase fail</string>
    <string name="rfid_mgs_erase_succ">Erase succ</string>
    <string name="scanning">Aucun équipement détécté</string>
    <string name="select_device">Selectionner un équipement</string>
    <string name="none_paired">No Matching</string>
    <string name="none_found">Not found</string>
    <string name="title_paired_devices">Matched</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_uhfmain">UHF</string>
    <string name="tvInventoryName">Inventory Tag</string>
    <string name="tvCountOfTags">Total&#160;&#160;</string>
    <string name="rbInventorySingle">Single</string>
    <string name="rbInventoryLoop">Scan</string>
    <string name="rbInventoryAnti">Anti</string>
    <string name="tvQ">Q value：</string>
    <string name="btInventory">Start</string>
    <string name="title_stop_Inventory">Stop</string>
    <string name="tvTagEPC">EPC</string>
    <string name="tvTagLen">Length</string>
    <string name="tvTagCount">Nombre</string>
    <string name="btClear">Vider</string>
    <string-array name="arrayAntiQ">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="arrayLF">
        <item>ID Card</item>
        <item>Animal Tag</item>
        <item>HiTag</item>
        <item>HDX Tag</item>
        <item>EM4450</item>
    </string-array>
    <string name="btUii">Read EPC</string>
    <string name="ckWithUii">Use EPC</string>
    <string name="tvTagUii_Read">EPC：</string>
    <string name="tvBank">Bank：</string>
    <string name="tvPtr">Ptr：</string>
    <string name="tvLen">Len：</string>
    <string name="tvAccessPwd">Access Pwd：</string>
    <string name="tvOption_Read">Read Mode：</string>
    <string name="ckLoop_Read">Auto</string>
    <string name="ckAnti_Read">Anti</string>
    <string name="ckSecond">2级参数设置</string>
    <string name="tvBank2_Read">Block：</string>
    <string name="tvPtr2_Read">Ptr：</string>
    <string name="tvLen2_Read">Len：</string>
    <string name="tvData_Read">Data：</string>
    <string name="btRead">Read</string>
    <string-array name="arrayBank">
        <item>RESERVED</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="mode">
        <item>ECB</item>
        <item>CBC</item>
        <item>OFB</item>
        <item>CFB</item>
    </string-array>
    <string-array name="arrayOption_Read">
        <item>Single</item>
        <item>Auto</item>
        <item>Anti(1 level)</item>
        <item>Anti(2 level)</item>
    </string-array>
    <string name="uhf_title_power">Puisance du scanner</string>
    <string name="uhf_btn_setpower">Modifier </string>
    <string name="uhf_btn_getpower">Puissance actuelle</string>
    <string name="uhf_title_dbm">dBm</string>
    <string name="uhf_msg_set_protocol_succ">Set the protocol success</string>
    <string name="uhf_msg_set_protocol_fail">Set the protocol failure</string>
    <string name="uhf_msg_get_protocol_succ">Get the protocol success</string>
    <string name="uhf_msg_get_protocol_fail">Get the protocol failure</string>
    <string-array name="arrayPower">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string name="tvChooseInfo">请选择UII的去向</string>
    <string name="rbRead">Read Data</string>
    <string name="rbWrite">Write Data</string>
    <string name="rbErase">Erase Data</string>
    <string name="rbLock">Lock Data</string>
    <string name="btEnter">CONFIRMER</string>
    <string name="btCancel">ANNULER</string>
    <string name="tvGetUiiForOperation">Tags List</string>
    <string name="btReadUii">Read UII</string>
    <string name="btStop">Stop</string>
    <string name="btBack1">Back</string>
    <string name="tvTagUii_Data">EPC：</string>
    <string name="tvBank_Data">Block：</string>
    <string name="tvPtr_Data">Ptr：</string>
    <string name="tvLen_Data">Len：</string>
    <string name="tvCount_Data">Count：</string>
    <string name="tvData_Data">Data：</string>
    <string name="tvStatus_Data">Status：</string>
    <string name="tvTagUii_Write">EPC：</string>
    <string name="tvOption_Write">Write Mode：</string>
    <string name="tvData_Write">Write Data：</string>
    <string name="btWrite">Write Data</string>
    <string-array name="arrayOption_Write">
        <item>Singleword</item>
        <item>Multiword</item>
    </string-array>
    <string name="tvTagUii_Lock">EPC：</string>
    <string name="tvKill_Lock">Kill Pwd：</string>
    <string name="tvAccess_Lock">Access Pwd：</string>
    <string name="tvUII_Lock">UII：</string>
    <string name="tvTID_Lock">TID：</string>
    <string name="tvUSER_Lock">USER：</string>
    <string name="tvLockCode_Lock">Lock Code：</string>
    <string name="btCreateCode">Create Code</string>
    <string name="btLock">Lock</string>
    <string-array name="arrayLock">
        <item>Hold</item>
        <item>Lock</item>
        <item>Unlock</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
    </string-array>
    <string name="tvTagUii_Kill">EPC：</string>
    <string name="tvKillPwd">Kill Pwd：</string>
    <string name="btKill">Kill</string>
    <string name="tvBank_Select">Block：</string>
    <string name="tvFrequencyBand">Frequency band：</string>
    <string name="btSetFre">FrequencySet</string>
    <string name="btGetFre">Read Frequency</string>
    <string name="tvFreHop">Hop：</string>
    <string name="btSetFreHop">Set FreHop</string>
    <string name="title_us_hop">US</string>
    <string name="title_BRA_hop">BRA</string>
    <string name="title_other_hop">Other</string>
    <string name="title_buzzer">Buzzer sur le scanner</string>
    <string name="title_buzzer_open">Activer</string>
    <string name="title_buzzer_close">Désactiver</string>
    <string name="continuous_wave">Continuous wave</string>
    <string name="realTime">Real time</string>
    <string name="offline">Offline</string>
    <string name="workMode">Working mode</string>
    <string name="autoReconnect">Automatic reconnection</string>
    <string name="btSetProtocol">Set Protocol</string>
    <string name="btGetProtocol">Get Protocol</string>
    <string name="tvProtocol">Protocol(Only R2000)：</string>
</resources>